started working on the design of the home page

--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,1 +1,12 @@
 // Specific CSS for your home-page
+.container {
+  display: flex;
+  justify-content: center;
+  height: 90vh;
+  background-color: black;
+}
+
+h1 {
+  font-family: 'Raleway', sans-serif;
+  font-size: 900,
+}
