--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,2 +1,3 @@
-<h1>Pages#home</h1>
-<p>Find me in app/views/pages/home.html.erb</p>
+<div class="container">
+  <h3>BOOK UNIQUE HOMES AND <br> EXPERIENCES ALL OVER THE WORLD.</h3>
+</div>
