--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -3,10 +3,11 @@
   display: flex;
   justify-content: center;
   height: 90vh;
-  background-color: black;
+  width: 182vh;
+  background-color: blue;
 }
 
-h1 {
+.container h3 {
   font-family: 'Raleway', sans-serif;
-  font-size: 900,
 }
+
