--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -1,13 +1,13 @@
 // Specific CSS for your home-page
 .container {
   display: flex;
-  justify-content: center;
   height: 90vh;
   width: 182vh;
-  background-color: blue;
 }
 
-.container h3 {
+.container h1 {
   font-family: 'Raleway', sans-serif;
+  margin-top: 150px;
+  margin-left: 130px;
 }
 
