--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,3 +1,5 @@
-<div class="container">
-  <h3>BOOK UNIQUE HOMES AND <br> EXPERIENCES ALL OVER THE WORLD.</h3>
-</div>
+<class class="container">
+  <h1>Book unique homes and<br>experiences all over the world.</h1>
+</class>
+
+
