--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,2 +1,14 @@
-<h1>Categories#index</h1>
-<p>Find me in app/views/categories/index.html.erb</p>
+<h1><%= @categories.first.name %></h1>
+<div class="container">
+  <% @flats.each do |flat| %>
+  <div class="card">
+    <div class="media red">
+      <div class="circle">
+        <span class="badge"><i class="fa fa-book"></i></span>
+      </div>
+    </div>
+    <h3><%= flat.title %></h3>
+    <p> <%= flat.description %></p>
+  </div>
+  <% end %>
+</div>
