--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -13,10 +13,25 @@
 }
 
 .container h1 {
-  font-family: 'Raleway', sans-serif;
+  font-weight: 400;
   color: white;
 }
 
 .container .form {
-  width: 40em;
+  width: 37em;
+  margin-top: 10px;
+}
+
+.container .form-control {
+  border-radius: 5px;
+  background: none;
+  color: white;
+}
+
+.love {
+  position: absolute;
+  right: 25px;
+  bottom: 0;
+  color: white;
+  font-size: 15px;
 }
