--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,4 @@
-<class class="container">
+<div class="container">
   <h1>Book unique homes and<br>experiences all over the world.</h1>
   <%= form_tag categories_path, method: :get, :class => 'form' do %>
   <%= text_field_tag :query,
@@ -7,6 +7,7 @@
     placeholder: "Search Flats"
     %>
     <% end %>
-</class>
-
-
+    <div class="love">
+      <p>Made with love by Francisco Barreto</p>
+    </div>
+</div>
