--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -1,5 +1,4 @@
-<h1><%= @categories.first.name %></h1>
-<div class="container">
+<div class="container-2">
   <% @flats.each do |flat| %>
   <div class="card">
     <div class="media red">
