added photos to the flats,changed the design of the categories index page and the card design.

--- a/app/assets/stylesheets/pages/_categories-index.scss
+++ b/app/assets/stylesheets/pages/_categories-index.scss
@@ -2,4 +2,7 @@
   background-color: white;
   display: flex;
   flex-direction: row;
+  flex-wrap: wrap;
+  width: 100%;
+  justify-content: center;
 }
