--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100vh;
   align-items: center;
-  background-image: url('http://res.cloudinary.com/franciscobarreto/image/upload/v1535468337/halmx0jyrwobxoyzgjmw.jpg');
+  background-image: url('https://res.cloudinary.com/franciscobarreto/image/upload/v1535468337/halmx0jyrwobxoyzgjmw.jpg');
   background-size: cover;
   background-repeat: no-repeat;
   background-position: fixed;
