--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,12 +1,17 @@
 .card {
-  border-radius: 2px;
   width: 15em;
   height: 200px;
-  margin: 15px;
+  margin: 15px 15px 55px 15px;
+
+  a {
+    color: black;
+    text-decoration: none;
+  }
 }
 
 .pic {
+  border-radius: 3px;
   width: 100%;
-  height: 200px;
+  height: 100%;
   background-size: cover;
 }
