--- a/app/assets/stylesheets/pages/_flats-show.scss
+++ b/app/assets/stylesheets/pages/_flats-show.scss
@@ -8,20 +8,31 @@
 .title-container {
   display: flex;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
-  flex-grow: 1;
   margin: 15px;
   background-color: #F2F2F2;
+  width: 30%;
+}
+
+.title-container h2 {
+  color: #484848;
+}
+
+.title-container p {
+  color: #767676;
 }
 
 .photo {
-  height: 500px;
-  width: 700px;
+  height: 70vh;
+  width: 70%;
   align-self: flex-end;
   margin: 15px;
-  flex-grow: 2;
-  img  {
-    height: 100%;
-    width: 100%;
-  }
+  background-size: cover;
+}
+
+.container4 {
+  display: flex;
+  flex-direction: row;
+  background-color: white;
 }
