--- a/app/assets/stylesheets/pages/_flats-show.scss
+++ b/app/assets/stylesheets/pages/_flats-show.scss
@@ -13,20 +13,19 @@
   margin: 15px;
   background-color: #F2F2F2;
   width: 30%;
-}
 
-.title-container h2 {
-  color: #484848;
-}
+    h2 {
+      color: #484848;
+    }
 
-.title-container p {
-  color: #767676;
+    p {
+      color: #767676;
+    }
 }
 
 .photo {
-  height: 70vh;
+  height: 75vh;
   width: 70%;
-  align-self: flex-end;
   margin: 15px;
   background-size: cover;
 }
@@ -34,5 +33,11 @@
 .container4 {
   display: flex;
   flex-direction: row;
+  justify-content: space-around;
   background-color: white;
+  margin: 70px 40px 40px 40px;
+
+  #flat-description {
+    max-width: 45vw;  
+  }
 }
