--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,10 +6,15 @@
   width: 100%;
   height: 100vh;
   align-items: center;
-  background-image: url('https://res.cloudinary.com/franciscobarreto/image/upload/v1535468337/halmx0jyrwobxoyzgjmw.jpg');
-  background-size: cover;
-  background-repeat: no-repeat;
-  background-position: fixed;
+  
+    video {
+      position: fixed;
+      top: 50%; left: 50%;
+      z-index: -1;
+      width: auto;
+      height: 105vh;
+      transform: translate(-50%, -50%);
+    }
 }
 
 .container h1 {
