--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -1,11 +1,19 @@
 .card {
-  width: 15em;
-  height: 200px;
-  margin: 15px 15px 55px 15px;
+  width: 20em;
+  height: 270px;
+  margin: 15px 5px 60px 15px;
 
   a {
     color: black;
     text-decoration: none;
+  }
+
+  h5 {
+    margin-top: 5px;
+  }
+
+  p {
+    margin-top: -11px;
   }
 }
 
