--- a/app/assets/stylesheets/pages/_categories-index.scss
+++ b/app/assets/stylesheets/pages/_categories-index.scss
@@ -2,6 +2,14 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  width: 100%;
-  justify-content: center;
+  max-width:  60%;
+  justify-content: flex-start;
 }
+
+.container-5 {
+  display: flex;
+  flex-direction: row;
+  width: 100%;
+}
+
+
