--- a/app/assets/stylesheets/pages/_categories-index.scss
+++ b/app/assets/stylesheets/pages/_categories-index.scss
@@ -2,8 +2,8 @@
   display: flex;
   flex-direction: row;
   flex-wrap: wrap;
-  max-width:  60%;
-  justify-content: flex-start;
+  width:  65%;
+  justify-content: center;
 }
 
 .container-5 {
@@ -11,5 +11,19 @@
   flex-direction: row;
   width: 100%;
 }
+
+.container-6 {
+  display: flex;
+  width: 92%;
+  flex-direction: column;
+  margin: 25px 15px 0px 15px;
+  // align-self: flex-start;
+  // flex: 1;
+
+   h4 {
+     color: #484848;
+   }
+}
+
 
 
