--- a/app/views/categories/index.html.erb
+++ b/app/views/categories/index.html.erb
@@ -7,9 +7,8 @@
   </div>
   <div
     id="map"
-    style="width: 35%; height: 89vh;"
+    style="width: 35%; height: 89vh; position: sticky; top: 70px;"
     data-markers="<%= @markers.to_json %>"
     data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
   ></div>
 </div>
-
