--- a/app/views/shared/_navbar2.html.erb
+++ b/app/views/shared/_navbar2.html.erb
@@ -18,7 +18,7 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "Host", "#", class: "navbar-wagon-item-2 navbar-wagon-link-2" %>
+      <%= link_to "Add Flat", new_flat_path, class: "navbar-wagon-item-2 navbar-wagon-link-2" %>
       <%= link_to "Trips", "#", class: "navbar-wagon-item-2 navbar-wagon-link-2" %>
       <%= link_to "Messages", "#", class: "navbar-wagon-item-2 navbar-wagon-link-2" %>
 
