--- a/app/views/shared/_navbar3.html.erb
+++ b/app/views/shared/_navbar3.html.erb
@@ -18,7 +18,7 @@
     <% if user_signed_in? %>
 
       <!-- Links when logged in -->
-      <%= link_to "Host", "#", class: "navbar-wagon-item-3 navbar-wagon-link-3" %>
+      <%= link_to "Add Flat", new_flat_path, class: "navbar-wagon-item-3 navbar-wagon-link-3" %>
       <%= link_to "Trips", "#", class: "navbar-wagon-item-3 navbar-wagon-link-3" %>
       <%= link_to "Messages", "#", class: "navbar-wagon-item-3 navbar-wagon-link-3" %>
 
