--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,6 @@
   <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search Flats" %>
     <% end %>
     <div class="love">
-      <p>Made with love by Francisco Barreto</p>
+      <p>Made with <i class="fas fa-heart"></i> by Francisco Barreto</p>
     </div>
 </div>
