--- a/app/views/flats/edit.html.erb
+++ b/app/views/flats/edit.html.erb
@@ -1,2 +1,8 @@
-<h1>Flats#edit</h1>
-<p>Find me in app/views/flats/edit.html.erb</p>
+<div class="container5">
+  <h3>Edit your space</h3>
+</div>
+<div class="form-background">
+  <%= render 'shared/edit_form' %>
+</div>
+
+
