--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -3,27 +3,7 @@
   <p>Airbnb lets you make money renting out your place.</p>
 </div>
 <div class="form-background">
-  <%= simple_form_for(@flat) do |f| %>
-    <%= f.label "Home Type" %>
-    <%= f.select :home_type_id, ["Apartment", "House"] %>
-    <%= f.label "Room Type" %>
-    <%= f.select :room_type_id, ["Entire Home", "Private Room", "Shared Room"] %>
-    <%= f.label "Category" %>
-    <%= f.select :category_id, ["Modern"] %>
-    <%= f.label "Acommodates" %>
-    <%= f.select :acommodates, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15] %>
-    <%= f.label "Title" %>
-    <%= f.text_field :title %>
-    <%= f.label "Description" %>
-    <%= f.text_field :description %>
-    <%= f.label "Price (per night)" %>
-    <%= f.text_field :price %>
-    <%= f.label "Address" %>
-    <%= f.text_field :address %>
-    <%= f.input :photo %>
-    <%= f.input :photo_cache, as: :hidden %>
-    <%= f.submit %>
-  <% end %>
+  <%= render 'shared/new_form' %>
 </div>
 
 
