--- a/app/views/shared/_edit_form.html.erb
+++ b/app/views/shared/_edit_form.html.erb
@@ -1,10 +1,10 @@
 <%= simple_form_for @flat, html: {id: "update_form"} do |f| %>
   <%= f.label "Home Type" %>
-  <%= f.select :home_type_id, ["Apartment", "House"] %>
+  <%= f.collection_select :home_type_id, HomeType.all, :id, :name %>
   <%= f.label "Room Type" %>
-  <%= f.select :room_type_id, ["Entire Home", "Private Room", "Shared Room"] %>
+  <%= f.collection_select :room_type_id, RoomType.all, :id, :name %>
   <%= f.label "Category" %>
-  <%= f.select :category_id, ["Modern"] %>
+  <%= f.collection_select :category_id, Category.all, :id, :name %>
   <%= f.label "Acommodates" %>
   <%= f.select :acommodates, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15] %>
   <%= f.label "Title" %>
