--- a/app/views/shared/_new_form.html.erb
+++ b/app/views/shared/_new_form.html.erb
@@ -1,21 +1,20 @@
 <%= simple_form_for(@flat) do |f| %>
-  <%= f.label "Home Type" %>
-  <%= f.collection_select :home_type_id, HomeType.all, :id, :name %>
+  <%= f.label "Home Type"  %>
+  <%= f.collection_radio_buttons :home_type_id, HomeType.all, :id, :name %>
   <%= f.label "Room Type" %>
-  <%= f.collection_select :room_type_id, RoomType.all, :id, :name %>
-  <%= f.label "Category" %>
-  <%= f.collection_select :category_id, Category.all, :id, :name %>
+  <%= f.collection_radio_buttons :room_type_id, RoomType.all, :id, :name  %>
   <%= f.label "Acommodates" %>
-  <%= f.select :acommodates, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15] %>
-  <%= f.label "Title" %>
-  <%= f.text_field :title %>
-  <%= f.label "Description" %>
-  <%= f.text_field :description %>
-  <%= f.label "Price (per night)" %>
-  <%= f.text_field :price %>
+  <%= f.select :acommodates, (1..15) %>
   <%= f.label "Address" %>
-  <%= f.text_field :address %>
+  <%= f.input :address, label: false, required: true %>
+  <%= f.label "Title" %>
+  <%= f.input :title, label: false, required: true %>
+  <%= f.label "Description" %>
+  <%= f.input :description, label: false, required: true %>
+  <%= f.label "Price (per night)" %>
+  <%= f.input :price, label: false, required: true %>
   <%= f.input :photo %>
   <%= f.input :photo_cache, as: :hidden %>
-  <%= f.submit %>
+  <%= f.submit  %>
 <% end %>
+
