finished the add and edit form design with additional info and new colors

--- a/app/assets/stylesheets/components/_new_form.scss
+++ b/app/assets/stylesheets/components/_new_form.scss
@@ -54,6 +54,13 @@
     height: 60px;
     border-radius: none;
   }
+  .submit {
+    background-color: #FF5A5F;
+    color: white;
+    &:hover {
+      border: 1px solid white;
+    }
+  }
 }
 
 // #new_flat {
