--- a/app/views/flats/new.html.erb
+++ b/app/views/flats/new.html.erb
@@ -4,6 +4,28 @@
 </div>
 <div class="form-background">
   <%= render 'shared/new_form' %>
+  <div class="additional-info">
+    <div class="info-card" id="trust-safety">
+      <i class="far fa-handshake"></i>
+      <h4>Trust & Safety</h4>
+      <p>Trust & safety tools help you accept a booking only if you're
+      100% confortable</p>
+    </div>
+    <div class="info-card" id="host-guarantee">
+      <i class="fas fa-stamp"></i>
+      <h4>$1,000,000 Host<br>Guarantee</h4>
+      <p>Your piece of mind is priceless. So we don't charge for it.
+      Every eligible booking for CheapAirbnb is covered by our Host
+    Guarantee - at no additional cost to you.</p>
+    </div>
+    <div class="info-card" id="secure-payments">
+      <i class="fas fa-lock"></i>
+      <h4>Secure Payments</h4>
+      <p>Our fast, flexible payment system puts money in your bank account
+      24 hours after guests check in.</p>
+    </div>
+  </div>
 </div>
+
 
 
