--- a/app/views/shared/_edit_form.html.erb
+++ b/app/views/shared/_edit_form.html.erb
@@ -17,5 +17,5 @@
   <%= f.text_field :address, placeholder: "Where is your place?" %>
   <%= f.input :photo %>
   <%= f.input :photo_cache, as: :hidden %>
-  <%= f.submit %>
+  <%= f.button :submit, class:"submit" %>
 <% end %>
