--- a/app/views/shared/_new_form.html.erb
+++ b/app/views/shared/_new_form.html.erb
@@ -15,6 +15,6 @@
   <%= f.input :price, label: false, required: true %>
   <%= f.input :photo %>
   <%= f.input :photo_cache, as: :hidden %>
-  <%= f.submit  %>
+  <%= f.button :submit, class: "submit"  %>
 <% end %>
 
