removed the categories views,controllers and model

--- a/app/assets/stylesheets/pages/_index.scss
+++ b/app/assets/stylesheets/pages/_index.scss
@@ -1,9 +1,9 @@
 // Import page-specific CSS files here.
 @import "home";
-@import "categories-index";
 @import "flats-show";
 @import "flats-new";
 @import "flats-edit";
+@import "flats-index";
 
 
 body {
