--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -1,6 +1,6 @@
 <div class="container3">
   <div class="title-container">
-    <p> <%= @category.name.upcase %> </p>
+    <p><%= @flat.room_type.name %></p>
     <h2> <%= @flat.title %> </h2>
   </div>
   <div class="photo" style="background-image: url('<%= cl_image_path @flat.photo %>')">
