--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,2 +1,15 @@
-<h1>Flats#index</h1>
-<p>Find me in app/views/flats/index.html.erb</p>
+<div class="container-5">
+  <div class="container-2">
+    <div class="container-6">
+        <h4><strong>Explore all <%= @flats.count %> homes </strong></h4>
+        <p>Add your check-in and checkout dates for accurate availability and pricing</p>
+    </div>
+      <%= render 'shared/card' %>
+  </div>
+  <div
+    id="map"
+    style="width: 35%; height: 89vh; position: sticky; top: 79px;"
+    data-markers="<%= @markers.to_json %>"
+    data-mapbox-api-key="<%= ENV['MAPBOX_API_KEY'] %>"
+  ></div>
+</div>
