--- a/app/views/shared/_navbar3.html.erb
+++ b/app/views/shared/_navbar3.html.erb
@@ -4,7 +4,7 @@
     <%= image_tag "airbnblogocolor2.png", height: 40 %>
   <% end %>
 
-  <%= form_tag categories_path, method: :get, :class => 'form' do %>
+  <%= form_tag flats_path, method: :get, :class => 'form' do %>
   <%= text_field_tag :query,
   params[:query],
   class: "form-control",
