fixed the navbar, the flats index page and the sticky map. added new seeds with faker

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -13,7 +13,7 @@
   <body>
     <% if controller_name  == "pages" && action_name == "home"%>
       <%= render 'shared/navbar' %>
-    <% elsif controller_name == "categories" && action_name == "index" %>
+    <% elsif controller_name == "flats" && action_name == "index" %>
       <%= render 'shared/navbar2' %>
     <% else %>
       <%= render 'shared/navbar3' %>
