added new seeds, geospatial search, new search forms, removed address from flats and added zip,city,state and country to flats. mapbox is improved with zooming in

--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -1,7 +1,7 @@
 <div class="container-5">
   <div class="container-2">
     <div class="container-6">
-        <h4><strong>Explore all <%= @flats.count %> homes </strong></h4>
+        <h4><strong>Explore all <%= @flats.size %> homes </strong></h4>
         <p>Add your check-in and checkout dates for accurate availability and pricing</p>
     </div>
       <%= render 'shared/card' %>
