--- a/app/assets/stylesheets/components/_navbar2.scss
+++ b/app/assets/stylesheets/components/_navbar2.scss
@@ -15,15 +15,22 @@
   z-index: 1;
 }
 
-.navbar-wagon-2 .form-control {
+// .navbar-wagon-2 .form {
+//   align-self: flex-start;
+// }
+
+.navbar-wagon-2 #near {
   width: 25em;
   color: #484848;
   margin-top: 10px;
-  box-shadow: 0px 1px 1px 1px #F4F3F1;
+  box-shadow: 0px 2px 2px 2px #F4F3F1;
   font-weight: 700;
+  border: 1px solid #EDECEA;
+  border-radius: 5px;
+  height: 45px;
 }
 
-.navbar-wagon-2 .form-control:hover {
+.navbar-wagon-2 #near:hover {
   box-shadow: 0px 3px 3px 3px #F4F3F1;
 }
 
