--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,7 +6,7 @@
   width: 100%;
   height: 100vh;
   align-items: center;
-  
+
     video {
       position: fixed;
       top: 50%; left: 50%;
@@ -22,15 +22,21 @@
   color: white;
 }
 
-.container .form {
-  width: 37em;
-  margin-top: 10px;
+.container #near {
+  width: 32em;
+  margin-top: 15px;
+  border-radius: 5px;
+  border: none;
+  height: 40px;
 }
 
-.container .form-control {
+.container .submit {
+  margin-top: 15px;
   border-radius: 5px;
-  background: none;
+  border: none;
+  height: 40px;
   color: white;
+  background-color: #FF5A5F;
 }
 
 .love {
