--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,10 +1,11 @@
 <div class="container">
 <%= video_tag "waves.mp4", :controls => false, :autoplay => true, :loop => true, muted: true %>
   <h1>Book unique homes and<br>experiences all over the world.</h1>
-  <%= form_tag flats_path, method: :get, :class => 'form' do %>
-  <%= text_field_tag :query, params[:query], class: "form-control", placeholder: "Search Flats" %>
-    <% end %>
-    <div class="love">
-      <p>Made with <i class="fas fa-heart"></i> by Francisco Barreto</p>
-    </div>
+  <%= form_tag flats_path, method: :get, :class => 'form' do |f| %>
+    <%= text_field_tag :near, nil, placeholder: "Search by street,city or country" %>
+    <%= submit_tag "Search", class: "submit" %>
+  <% end %>
+  <div class="love">
+    <p>Made with <i class="fas fa-heart"></i> by Francisco Barreto</p>
+  </div>
 </div>
