--- a/app/views/shared/_edit_form.html.erb
+++ b/app/views/shared/_edit_form.html.erb
@@ -4,7 +4,7 @@
   <%= f.label "Room Type" %>
   <%= f.collection_radio_buttons :room_type_id, RoomType.all, :id, :name %>
   <%= f.label "Acommodates" %>
-  <%= f.select :acommodates, [1,2,3,4,5,6,7,8,9,10,11,12,13,14,15] %>
+  <%= f.select :acommodates, (1..15) %>
   <%= f.label "Title" %>
   <%= f.text_field :title ,placeholder: "Give your place a stylish title", required: true %>
   <%= f.label "Description" %>
