--- a/app/views/shared/_navbar3.html.erb
+++ b/app/views/shared/_navbar3.html.erb
@@ -4,13 +4,9 @@
     <%= image_tag "airbnblogocolor2.png", height: 40 %>
   <% end %>
 
-  <%= form_tag flats_path, method: :get, :class => 'form' do %>
-  <%= text_field_tag :query,
-  params[:query],
-  class: "form-control",
-    placeholder: "Search Flats"
-    %>
-    <% end %>
+  <%= form_tag flats_path, method: :get, :class => 'form' do |f| %>
+    <%= text_field_tag :near, nil, placeholder: "Search" %>
+  <% end %>
 
   <!-- Right Navigation -->
   <div class="navbar-wagon-right-3 hidden-xs hidden-sm">
@@ -21,30 +17,8 @@
       <%= link_to "Add Flat", new_flat_path, class: "navbar-wagon-item-3 navbar-wagon-link-3" %>
       <%= link_to "Trips", "#", class: "navbar-wagon-item-3 navbar-wagon-link-3" %>
       <%= link_to "Messages", "#", class: "navbar-wagon-item-3 navbar-wagon-link-3" %>
+      <%= link_to "Log Out", destroy_user_session_path, method: :delete, class: "navbar-wagon-item-3 navbar-wagon-link-3" %>
 
-      <!-- Avatar with dropdown menu -->
-      <div class="navbar-wagon-item-3">
-        <div class="dropdown">
-          <%= image_tag "http://kitt.lewagon.com/placeholder/users/ssaunier", class: "avatar dropdown-toggle", id: "navbar-wagon-menu", "data-toggle" => "dropdown" %>
-          <ul class="dropdown-menu dropdown-menu-right navbar-wagon-dropdown-menu">
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-user"></i> <%= t(".profile", default: "Profile") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to "#" do %>
-                <i class="fa fa-cog"></i>  <%= t(".settings", default: "Settings") %>
-              <% end %>
-            </li>
-            <li>
-              <%= link_to destroy_user_session_path, method: :delete do %>
-                <i class="fa fa-sign-out"></i>  <%= t(".sign_out", default: "Log out") %>
-              <% end %>
-            </li>
-          </ul>
-        </div>
-      </div>
     <% else %>
       <!-- Login link (when logged out) -->
       <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item-3 navbar-wagon-link-3" %>
