added modal login, styled modal login, changed the font on the body,added a helper to login with modal, added users controller

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -33,6 +33,11 @@
   justify-content: space-between;
 }
 
+.login-btn {
+  background: none;
+  border: none;
+}
+
 /* Basic navbar item */
 .navbar-wagon-item {
   cursor: pointer;
