--- a/app/views/flats/index.html.erb
+++ b/app/views/flats/index.html.erb
@@ -6,6 +6,7 @@
     </div>
       <%= render 'shared/card' %>
   </div>
+  <%= render "shared/modal_login" %>
   <div
     id="map"
     style="width: 35%; height: 89vh; position: sticky; top: 79px;"
