--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -5,6 +5,7 @@
     <%= text_field_tag :near, nil, placeholder: "Search by street,city or country" %>
     <%= submit_tag "Search", class: "submit" %>
   <% end %>
+ <%= render "shared/modal_login" %>
   <div class="love">
     <p>Made with <i class="fas fa-heart"></i> by Francisco Barreto</p>
   </div>
