--- a/app/assets/stylesheets/config/_fonts.scss
+++ b/app/assets/stylesheets/config/_fonts.scss
@@ -2,10 +2,11 @@
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300,700|Raleway:400,100,300,700,500");
 @import url('https://fonts.googleapis.com/css?family=Libre+Franklin:100,300,400,500,700,800');
 @import url('https://fonts.googleapis.com/css?family=Lato:100,400,700,900');
+@import url('https://fonts.googleapis.com/css?family=Montserrat:200,300,400,500,600,700,800&display=swap');
 
 
 // Define fonts for body and headers
-$body-font: "Lato", "sans-serif";
+$body-font: "Montserrat", "sans-serif";
 $headers-font: "Lato", "Helvetica", "sans-serif";
 
 // To use a font file (.woff) uncomment following lines
