--- a/app/views/flats/show.html.erb
+++ b/app/views/flats/show.html.erb
@@ -3,6 +3,7 @@
     <p><%= @flat.room_type.name %></p>
     <h2> <%= @flat.title %> </h2>
   </div>
+  <%= render "shared/modal_login" %>
   <div class="photo" style="background-image: url('<%= cl_image_path @flat.photo %>')">
     <% if policy(@flat).edit? %>
       <%= link_to edit_flat_path do %>
