--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -17,7 +17,9 @@
 
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item navbar-wagon-link" %>
+      <button type="button" class="navbar-wagon-item navbar-wagon-link login-btn" data-toggle="modal" data-target="#exampleModalCenter">
+        Login
+      </button>
     <% end %>
   </div>
 
