--- a/app/views/shared/_navbar3.html.erb
+++ b/app/views/shared/_navbar3.html.erb
@@ -21,7 +21,9 @@
 
     <% else %>
       <!-- Login link (when logged out) -->
-      <%= link_to t(".sign_in", default: "Login"), new_user_session_path, class: "navbar-wagon-item-3 navbar-wagon-link-3" %>
+      <button type="button" class="navbar-wagon-item-3 navbar-wagon-link-3 login-btn" data-toggle="modal" data-target="#exampleModalCenter">
+        Login
+      </button>
     <% end %>
   </div>
 
