changed the picture for the homepage, added flatpickr gem and added a new form with date selection in the home page, changed the bookings model and controller, added a new custom validator, changed the bookings routes and changed the css of the home page, changed the flat model

--- a/app/assets/stylesheets/components/_navbar.scss
+++ b/app/assets/stylesheets/components/_navbar.scss
@@ -50,8 +50,11 @@
   color: white;
   font-size: 14px;
   margin-top: 25px;
+  padding: 24px 20px;
+  border-bottom: 2px solid transparent;
 }
 .navbar-wagon-link:hover {
-  color: #30c5b1;
   text-decoration: none;
+  border-bottom: 2px solid white;
+  color: white;
 }
