--- a/app/assets/stylesheets/pages/_home.scss
+++ b/app/assets/stylesheets/pages/_home.scss
@@ -6,37 +6,14 @@
   width: 100%;
   height: 100vh;
   align-items: center;
-
-    video {
-      position: fixed;
-      top: 50%; left: 50%;
-      z-index: -1;
-      width: auto;
-      height: 105vh;
-      transform: translate(-50%, -50%);
-    }
+  background-image: url('https://res.cloudinary.com/franciscobarreto/image/upload/v1565881412/vlg1oaqohgpvc8dnfd4b.jpg');
+  background-size: cover;
+  background-repeat: no-repeat;
+  background-position: fixed;
 }
 
-.container h1 {
-  font-weight: 400;
-  color: white;
-}
-
-.container #near {
-  width: 32em;
-  margin-top: 15px;
-  border-radius: 5px;
-  border: none;
-  height: 40px;
-}
-
-.container .submit {
-  margin-top: 15px;
-  border-radius: 5px;
-  border: none;
-  height: 40px;
-  color: white;
-  background-color: #FF5A5F;
+.pickerbox {
+  background-color: white;
 }
 
 .love {
